＜アプリ名の変更とそれに合わせた修正＞ ・アプリ名をSimple Isvest｜シンプル・インベストに変更 ・ログイン画面にログインをイメージする画像を表示するように変更 ・新規登録画面のカラーを緑から青に変更しアプリ全体のイメージカラーを青に統一

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <!-- 絵文字ファビコン -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏢</text></svg>">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta
-      name="description"
-      content="不動産投資管理システム - 物件の収支管理と投資分析"
-  />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>不動産投資管理システム</title>
+  <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏢</text></svg>">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="theme-color" content="#000000"/>
+  <meta name="description"
+        content="Simple Isvest｜シンプル・インベスト - 不動産投資をシンプルに管理"/>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+  <title>Simple Isvest｜シンプル・インベスト</title>
 </head>
 <body>
 <noscript>このアプリを実行するにはJavaScriptを有効にする必要があります。</noscript>
